@@ -1,3 +1,6 @@
+19/06/08 Julien Dutheil
+* Shell variables are now 'global' in option files.
+
 24/04/08 -*- Version 0.2.3 -*-
 * This version requires the CVS version of Bio++ to be built.
 
